I added shadows to the buttons

--- a/stylesNew.css
+++ b/stylesNew.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+
+}
+
 .completed-task {
     text-decoration: line-through;
 }
@@ -7,14 +12,16 @@
     background-color:#0923a5; /* Set your custom color here */
     color: #fff; /* Text color for the button */
     border: 1px solid #0923a5;
-    transition: 0.3s ease-in-out;
+    transition: box-shadow 0.4s ease-in-out; 
+    
 }
 
 .delete-button:hover {
     color:  #0923a5;
     background-color: #fff; /* Set your custom color for hover */
     border: 1px solid  #0923a5; /* Set your custom border color for hover */
-    transform: scale(1.1);
+    box-shadow: 0 4px 6px 0  #a5f7c0; /* Adjust values as needed */
+   
 }
 
 /* Custom styles for finished button */
@@ -22,14 +29,16 @@
     background-color: #a5f7c0; /* Set your custom color here */
     color: #0923a5; /* Text color for the button */
     border: 1px solid #a5f7c0;
-    transition: 0.3s ease-in-out;
+    transition: box-shadow 0.4s ease-in-out; 
+    
 }
 
 .finished-button:hover {
     background-color: #51A5BF; /* Set your custom color for hover */
     border: 1px solid #0923a5; /* Set your custom border color for hover */
     color: white;
-    transform: scale(1.1);
+    box-shadow: 0 4px 6px 0 #0923a5; /* Adjust values as needed */
+   
 }
 
 .save-btn {
@@ -38,12 +47,34 @@
     color: #fff; /* Text color for the button */
     border: 1px solid #0923a5;
     border-style: none;
-    transition: 0.3s ease-in-out;
+    transition: box-shadow 0.4s ease-in-out; 
+  
 }
 
 .save-btn:hover {
     background: #51A5BF;  /* Set your custom color here */
     color: #fff; /* Text color for the button */
     border: 1px solid #0923a5;
-    transform: scale(1.1);
+    box-shadow: 0 4px 6px 0#0923a5; /* Adjust values as needed */
+  
 }
+
+/* Custom styles for finished button 
+
+.get-tasks {
+    background: rgb(9,35,165);
+    background: linear-gradient(90deg, rgba(9,35,165,1) 0%, rgba(165,247,192,1) 100%);  
+    color: #fff; 
+    border: 1px solid #0923a5;
+    border-style: none;
+    transition: box-shadow 0.4s ease-in-out; 
+}
+
+.get-tasks:hover{
+    background: #51A5BF;  
+    color: #fff; 
+    border: 1px solid #0923a5;
+    box-shadow: 0 4px 6px 0 #0923a5; 
+
+
+}  */
