--- a/sabinatodo.css
+++ b/sabinatodo.css
@@ -10,19 +10,19 @@ h1 {
     font-family: 'Luxurious Roman', serif;
     text-align: center;
     color: black;
-    margin-top: 20px;
+    margin-top: 2rem;
 }
 
 #toreadform {
     text-align: center;
-    margin: 20px auto;
+    margin: 2rem auto;
 }
 
 input[type="text"] {
     width: 50%;
-    padding: 20px;
-    font-size: 18px;
-    margin: 10px 0;
+    padding: 1rem;
+    font-size: 1rem;
+    margin: 1rem 0;
     border: 0.6rem solid #a39292;
     border-style: inset;
     outline: none;
@@ -31,16 +31,17 @@ input[type="text"] {
 button {
     background-color: #2b2222;
     color: #fff;
-    padding: 10px 20px;
+    padding: 0.8rem 0.8rem;
     border: none;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 0.8rem;
+    border-radius: 0.5rem;
 }
 
 #toreadlist {
     list-style: none;
     padding: 0;
-    margin: 20px auto;
+    margin: 2rem auto;
     max-width: 70%;
     color: black;
     font-weight: bold;
@@ -54,8 +55,8 @@ button {
 
 li {
     background-color: #fff;
-    padding: 15px;
-    margin: 20px;
+    padding: 0.5rem;
+    margin: 0.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -70,16 +71,16 @@ li {
     background-color: #2b2222;
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 0.8rem 0.8rem;
     cursor: pointer;
-    margin-right: 10px; 
+    margin-right: 1rem; 
 }
 
 .update-button {
     background-color: #2b2222;
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 0.8rem 0.8rem;
     cursor: pointer;
 }
 
