--- a/sabinatodo.css
+++ b/sabinatodo.css
@@ -10,16 +10,17 @@ h1 {
     font-family: 'Luxurious Roman', serif;
     text-align: center;
     color: black;
-    margin-top: 2rem;
+    margin: 2rem auto;
 }
 
 #toreadform {
     text-align: center;
-    margin: 2rem auto;
+    margin: 1rem auto;
+    width: 70%;
 }
 
 input[type="text"] {
-    width: 50%;
+    width: 70%;
     padding: 1rem;
     font-size: 1rem;
     margin: 1rem 0;
@@ -41,20 +42,26 @@ button {
 #toreadlist {
     list-style: none;
     padding: 0;
-    margin: 2rem auto;
-    max-width: 70%;
+    margin: 0.5rem auto;
+    max-width: 80%;
     color: black;
     font-weight: bold;
 }
 
 .book-title {
+    background-color: #fff;
     color: black;
     font-weight: bold;
     flex-grow: 1;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 li {
-    background-color: #fff;
+    /*background-color: #fff;*/
     padding: 0.5rem;
     margin: 0.5rem;
     display: flex;
@@ -68,12 +75,20 @@ li {
 }
 
 .delete-button {
-    background-color: #2b2222;
-    color: #fff;
+    background-color: #2b2222 !important;
+    color: #fff !important;
     border: none;
     padding: 0.8rem 0.8rem;
-    cursor: pointer;
-    margin-right: 1rem; 
+    cursor: pointer ;
+    margin: 1rem; 
+    box-shadow: none;
+}
+
+.delete-button:hover {
+    color: inherit;
+    background-color: inherit;
+    border: inherit;
+    box-shadow: none;
 }
 
 .update-button {
@@ -81,6 +96,7 @@ li {
     color: #fff;
     border: none;
     padding: 0.8rem 0.8rem;
+    margin: 1rem;
     cursor: pointer;
 }
 
